correct font project text-alignment and update image

--- a/css/style.css
+++ b/css/style.css
@@ -374,6 +374,7 @@ padding-right: 8%;
 
 #font-title {
   padding-top: 40px;
+  text-align: center;
 }
 
 .overlay-description {
